Added bulk of save and load, save system has bug